--- a/MoviesProject2/app/src/main/res/values/strings.xml
+++ b/MoviesProject2/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">MoviesProject</string>
-    <string name="todo">TODO</string>
+    <string name="app_name">Best Movies</string>
 </resources>
